# willaswebmainpartdeux

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
Willlasweb/: admin.py  apps.py  models.py  views.py
Willlasweb/migrations/: 0001_initial.py
ang-frontend/app/: package-lock.json
static/css/: aboutme.css  index.css  navbar.css
static/js/: index.js
templates/: about_me.html  contact.html  index.html  navbar.html
willaswebmain/: asgi.py  settings.py  urls.py  wsgi.py
