[tool.poetry]
name = "willaswebmain"
version = "0.1.0"
description = ""
authors = ["Josh Nichols <jnichols20091@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
