[tool.poetry]
name = "willaswebmain"
version = "0.1.0"
description = ""
authors = ["Josh Nichols <jnichols20091@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"
django-debug-toolbar = "^3.8.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
